[package]
name = "my-dropbox-controller"
version = "0.1.0"
authors = ["Koji Ota <afterjnih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
thiserror = "1.0"
kamadak-exif = "0.5"
mp4 = { git = "https://github.com/k-o-ta/mp4-rust.git", branch = "skip-TrakBox" }
chrono = "0.4"
chrono-tz = "0.5.3"
ring = "0.16.19"
data-encoding = "2.3.1"
dropbox-content-hasher = "0.3.0"
parallel_reader = "0.1.1"
tokio = { version = "1", features = ["full"] }

[dependencies.dropbox-sdk]
version = "*"
default_features = false
features = ["dbx_files", "dbx_users", "default_client"]

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]
